Additional refactorings, changing timing of checkings